# python-packaging-tutorial-2

./: .gitignore  MANIFEST.in  Makefile  README.md  clean.py  pyproject.toml  requirements.txt  setup.py
sound/: __init__.py
sound/effects/: __init__.py  echo.c  echo.html  echo.py  reverse.c  reverse.html  reverse.py  surround.c  surround.html  surround.py
sound/filters/: __init__.py  karaoke.c  karaoke.html  karaoke.py  synth.c  synth.html  synth.py  vocoder.c  vocoder.html  vocoder.py
sound/formats/: __init__.py  waveread.c  waveread.html  waveread.py  wavewrite.c  wavewrite.html  wavewrite.py
