[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "sound"
version = "0.1.0"
description = "A Cython-based sound processing library"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
]

[project.urls]
Homepage = "https://github.com/yourusername/sound"
Repository = "https://github.com/yourusername/sound"

[tool.setuptools.packages.find]
where = ["."]
include = ["sound*"]

[tool.setuptools.package-data]
sound = ["*.pyx", "*.pxd"] 